<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_2x"
        android:src="@drawable/logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_2x"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_person_outline"
            android:drawableTint="@color/colorDarkGrey"
            android:drawablePadding="@dimen/grid_2x"
            android:hint="@string/hint_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_2x"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:drawableTint="@color/colorDarkGrey"
            android:drawablePadding="@dimen/grid_2x"
            android:hint="@string/hint_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/grid_2x"
        style="@style/StandardButton"
        android:text="@string/button_login"
        android:onClick="onLogin" />

    <LinearLayout
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/grid_2x"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/LinkText"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:clickable="true"
            android:onClick="onForgotPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/LinkText"
            android:text="@string/no_account"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:clickable="true"
            android:onClick="onRegister" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlay_login_pb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorTransparentGrey"
        android:visibility="gone">

        <androidx.core.widget.ContentLoadingProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>