<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_2x"
                android:src="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_username"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_2x"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:drawableLeft="@drawable/ic_person_outline"
                    android:drawableTint="@color/colorDarkGrey"
                    android:drawablePadding="@dimen/grid_2x"
                    android:hint="@string/hint_username" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_email"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_2x"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/ic_email_outline"
                    android:drawableTint="@color/colorDarkGrey"
                    android:drawablePadding="@dimen/grid_2x"
                    android:hint="@string/hint_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_password"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_2x"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_lock_outline"
                    android:drawableTint="@color/colorDarkGrey"
                    android:drawablePadding="@dimen/grid_2x"
                    android:hint="@string/hint_password" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/til_register_confirm_password"-->
<!--                android:layout_width="@dimen/standard_width"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="@dimen/grid_2x"-->
<!--                android:layout_gravity="center_horizontal">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/et_register_confirm_password"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:inputType="textPassword"-->
<!--                    android:drawableLeft="@drawable/lock_icon_outline"-->
<!--                    android:drawablePadding="@dimen/grid_2x"-->
<!--                    android:hint="@string/hint_confirm_password" />-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <Button
                android:id="@+id/btn_register"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_gravity="center_horizontal"
                style="@style/StandardButton"
                android:text="@string/button_register"
                android:layout_margin="@dimen/grid_2x"
                android:onClick="register" />

            <TextView
                android:id="@+id/tv_back_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/LinkText"
                android:text="@string/back_to_login"
                android:textSize="16sp"
                android:layout_margin="@dimen/grid_2x"
                android:clickable="true"
                android:onClick="backToLogin" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linlay_register_pb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorTransparentGrey"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>